[tool.poetry]
name = "streamlit-ranking-shapley"
version = "0.1.0"
description = ""
authors = ["Alexandre Maros"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.11"
streamlit = "^1.28.1"
pandas = "^2.1.2"
scikit-learn = "^1.3.2"
shap = "^0.43.0"
streamlit-aggrid = "^0.3.4.post3"
streamlit-shap = "^1.0.2"
matplotlib = "^3.8.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
